# Bot

./: .gitignore  README.md  pyproject.toml
corebot/: __main__.py  agent.py  bootstrap.py  cli.py  config.py  mcp.py  path_utils.py  prompts.py  session_store.py  skills.py
corebot/tools/: __init__.py  files.py  shell.py
tests/: test_config.py  test_mcp.py  test_path_utils.py  test_session_store.py  test_skills.py
