[project]
name = "corebot"
version = "0.1.0"
description = "A minimal LangChain-based coding bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.7,<3.0",
    "openai>=2.0.0",
]

[project.scripts]
corebot = "corebot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corebot"]
